feat: add endpoint for registering passengers as a driver
